--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="CSD 340 Landing Page">
-    <meta name="author" content="Sue Sampson">
+    <meta name="author" content="Drew Crockett">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sue Sampson CSD 340 Landing Page</title>
+    <title>Drew Crockett CSD 340 Landing Page</title>
 
     <link rel="stylesheet" href="site.css">
 </head>
@@ -14,7 +14,7 @@
 <body>
     <div id="container">
 
-        <h1>Sue Sampson CSD 340 Landing Page</h1>
+        <h1>Drew Crockett CSD 340 Landing Page</h1>
 
         <h2>CSD 340 Web Development with HTML and CSS</h2>
 
@@ -23,13 +23,13 @@
         <h3>Module Assignments</h3>
         <ul>
             <li>
-                <a href="module-1/Sampson_Mod1_3.html">Assignment 1.3</a>
+                <a href="module-1/Crockett_Mod1_3.html">Assignment 1.3</a>
             </li>
             <li>
-                <a href="module-2/Sampson_Mod2_2.html">Assignment 2.2</a>
+                <a href="module-2/Crockett_Mod2_2.html">Assignment 2.2</a>
             </li>
             <li>
-                <a href="module-3/Sampson_Mod3_3.html">Assignment 3.3</a>
+                <a href="module-3/Crockett_Mod3_3.html">Assignment 3.3</a>
             </li>
         </ul>
 
