--- a/index.html
+++ b/index.html
@@ -20,40 +20,46 @@
 
         <hr>
 
+        <!-- Module Assignments Section -->
         <h3>Module Assignments</h3>
+
+        <!-- Module 1 -->
+        <h4>Module 1</h4>
         <ul>
-            <li>
-                <a href="module-1/Crockett_Mod1_3.html">Assignment 1.3</a>
-            </li>
-            <li>
-                <a href="module-2/Crockett_Mod2_2.html">Assignment 2.2</a>
-            </li>
-            <li>
-                <a href="module-3/Crockett_Mod3_3.html">Assignment 3.3</a>
-            </li>
+            <li><a href="module-1/Crockett_Mod1_1.html">Assignment 1.1</a></li>
+            <li><a href="module-1/Crockett_Mod1_2.html">Assignment 1.2</a></li>
+            <li><a href="module-1/Crockett_Mod1_3.html">Assignment 1.3</a></li>
         </ul>
 
+        <!-- Module 2 -->
+        <h4>Module 2</h4>
+        <ul>
+            <li><a href="module-2/Crockett_Mod2_1.html">Assignment 2.1</a></li>
+            <li><a href="module-2/Crockett_Mod2_2.html">Assignment 2.2</a></li>
+            <li><a href="module-2/Crockett_Mod2_3.html">Assignment 2.3</a></li>
+        </ul>
+
+        <!-- Module 3 -->
+        <h4>Module 3</h4>
+        <ul>
+            <li><a href="module-3/Crockett_Mod3_1.html">Assignment 3.1</a></li>
+            <li><a href="module-3/Crockett_Mod3_2.html">Assignment 3.2</a></li>
+            <li><a href="module-3/Crockett_Mod3_3.html">Assignment 3.3</a></li>
+        </ul>
+
+        <!-- Projects Section -->
         <h3>Projects</h3>
         <ul>
-            <li>
-                <a href="#">bioSite Project Home Page</a>
-            </li>
+            <li><a href="#">bioSite Project Home Page</a></li>
         </ul>
 
-        <h4>Important Links</h4>
+        <!-- Important Links Section -->
+        <h3>Important Links</h3>
         <ul>
-            <li>
-                <a href="https://validator.w3.org/" target="_blank">W3C HTML Validator</a>
-            </li>
-            <li>
-                <a href="http://jigsaw.w3.org/css-validator/" target="_blank">W3C CSS Validator</a>
-            </li>
-            <li>
-                <a href="https://www.w3schools.com/html/" target="_blank">HTML Tutorial</a>
-            </li>
-            <li>
-                <a href="https://bruinconnect.bellevue.edu/" target="_blank">BRUIN Connect</a>
-            </li>
+            <li><a href="https://validator.w3.org/" target="_blank">W3C HTML Validator</a></li>
+            <li><a href="http://jigsaw.w3.org/css-validator/" target="_blank">W3C CSS Validator</a></li>
+            <li><a href="https://www.w3schools.com/html/" target="_blank">HTML Tutorial</a></li>
+            <li><a href="https://bruinconnect.bellevue.edu/" target="_blank">BRUIN Connect</a></li>
         </ul>
 
     </div>
