--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <div id="container">
 
         <h1>Drew Crockett CSD 340 Landing Page</h1>
-
         <h2>CSD 340 Web Development with HTML and CSS</h2>
-
         <hr>
 
         <!-- Module Assignments Section -->
@@ -47,6 +45,23 @@
             <li><a href="module-3/Crockett_Mod3_3.html">Assignment 3.3</a></li>
         </ul>
 
+        <!-- Module 3 Book Images Gallery -->
+        <div id="module-3-gallery">
+            <h5>Module 3 Book Images</h5>
+            <div class="gallery">
+                <img src="module-3/images/book1.jpg" alt="Book 1">
+                <img src="module-3/images/book2.jpg" alt="Book 2">
+                <img src="module-3/images/book3.jpg" alt="Book 3">
+                <!-- Add more images here if needed -->
+            </div>
+        </div>
+
+        <!-- Module 4 -->
+        <h4>Module 4</h4>
+        <ul>
+            <li><a href="module-4/Crockett_Mod4_CSD402.html">Assignment 4.1</a></li>
+        </ul>
+
         <!-- Projects Section -->
         <h3>Projects</h3>
         <ul>
@@ -65,3 +80,4 @@
     </div>
 </body>
 </html>
+
