--- a/module-4/Crockett_Mod4_2.html
+++ b/module-4/Crockett_Mod4_2.html
@@ -13,6 +13,7 @@
 
         <div id="image-gallery">
 
+            <!-- Book 1 -->
             <div class="gallery-item">
                 <h3>The Great Gatsby</h3>
                 <figure>
@@ -21,6 +22,7 @@
                 </figure>
             </div>
 
+            <!-- Book 2 -->
             <div class="gallery-item">
                 <h3>1984</h3>
                 <figure>
@@ -29,6 +31,7 @@
                 </figure>
             </div>
 
+            <!-- Book 3 -->
             <div class="gallery-item">
                 <h3>To Kill a Mockingbird</h3>
                 <figure>
