--- a/index.html
+++ b/index.html
@@ -15,46 +15,33 @@
     <div id="container">
 
         <h1>Drew Crockett CSD 340 Landing Page</h1>
-
         <h2>CSD 340 Web Development with HTML and CSS</h2>
-
         <hr>
 
-        <!-- Module Assignments Section -->
+        <!-- Module Assignments -->
         <h3>Module Assignments</h3>
-
-        <!-- Module 1 -->
-        <h4>Module 1</h4>
         <ul>
-            <li><a href="module-1/Crockett_Mod1_1.html">Assignment 1.1</a></li>
-            <li><a href="module-1/Crockett_Mod1_2.html">Assignment 1.2</a></li>
-            <li><a href="module-1/Crockett_Mod1_3.html">Assignment 1.3</a></li>
+            <!-- Module 1 -->
+            <li><a href="module-1/Crockett_Mod1_3.html">Module 1 - Assignment 1.3</a></li>
+
+            <!-- Module 2 -->
+            <li><a href="module-2/Crockett_Mod2_2.html">Module 2 - Assignment 2.2</a></li>
+
+            <!-- Module 3 -->
+            <li><a href="module-3/Crockett_Mod3_3.html">Module 3 - Assignment 3.3</a></li>
+
+            <!-- Module 4 -->
+            <li><a href="module-4/Crockett_Mod4_2.html">Module 4 - Assignment 4.2</a></li>
         </ul>
 
-        <!-- Module 2 -->
-        <h4>Module 2</h4>
-        <ul>
-            <li><a href="module-2/Crockett_Mod2_1.html">Assignment 2.1</a></li>
-            <li><a href="module-2/Crockett_Mod2_2.html">Assignment 2.2</a></li>
-            <li><a href="module-2/Crockett_Mod2_3.html">Assignment 2.3</a></li>
-        </ul>
-
-        <!-- Module 3 -->
-        <h4>Module 3</h4>
-        <ul>
-            <li><a href="module-3/Crockett_Mod3_1.html">Assignment 3.1</a></li>
-            <li><a href="module-3/Crockett_Mod3_2.html">Assignment 3.2</a></li>
-            <li><a href="module-3/Crockett_Mod3_3.html">Assignment 3.3</a></li>
-        </ul>
-
-        <!-- Projects Section -->
+        <!-- Projects -->
         <h3>Projects</h3>
         <ul>
-            <li><a href="#">bioSite Project Home Page</a></li>
+            <li><a href="">bioSite Project Home Page</a></li>
         </ul>
 
-        <!-- Important Links Section -->
-        <h3>Important Links</h3>
+        <!-- Important Links -->
+        <h4>Important Links</h4>
         <ul>
             <li><a href="https://validator.w3.org/" target="_blank">W3C HTML Validator</a></li>
             <li><a href="http://jigsaw.w3.org/css-validator/" target="_blank">W3C CSS Validator</a></li>
