--- a/module-4/Crockett_Mod4_2.html
+++ b/module-4/Crockett_Mod4_2.html
@@ -2,7 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Assignment 4.2 Image Gallery">
+    <meta name="keywords" content="HTML, CSS, CSD 340">
+    <meta name="author" content="Drew Crockett">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>CSD 340 Web Development with HTML and CSS</title>
+
     <link rel="stylesheet" href="Crockett_Mod4_2.css">
 </head>
 
@@ -16,8 +22,9 @@
             <!-- Book 1 -->
             <div class="gallery-item">
                 <h3>The Great Gatsby</h3>
+
                 <figure>
-                    <img src="images/book1.jpg" alt="The Great Gatsby book cover">
+                    <img src="images/gatsby.jpg" alt="The Great Gatsby Book Cover">
                     <figcaption>(author: F. Scott Fitzgerald)</figcaption>
                 </figure>
             </div>
@@ -25,8 +32,9 @@
             <!-- Book 2 -->
             <div class="gallery-item">
                 <h3>1984</h3>
+
                 <figure>
-                    <img src="images/book2.jpg" alt="1984 book cover">
+                    <img src="images/1984.jpg" alt="1984 Book Cover">
                     <figcaption>(author: George Orwell)</figcaption>
                 </figure>
             </div>
@@ -34,17 +42,18 @@
             <!-- Book 3 -->
             <div class="gallery-item">
                 <h3>To Kill a Mockingbird</h3>
+
                 <figure>
-                    <img src="images/book3.jpg" alt="To Kill a Mockingbird book cover">
+                    <img src="images/mockingbird.jpg" alt="To Kill a Mockingbird Book Cover">
                     <figcaption>(author: Harper Lee)</figcaption>
                 </figure>
             </div>
 
         </div>
 
-        <div class="return-link">
+        <p style="text-align:center; margin-top: 40px;">
             <a href="../index.html">Return to Landing Page</a>
-        </div>
+        </p>
 
     </div>
 </body>
