--- a/module-1/Crockett_Mod1_3.html
+++ b/module-1/Crockett_Mod1_3.html
@@ -7,7 +7,7 @@
 
 <h1>Assignment 1.3 – Building a Web Page Exercise, Part 1</h1>
 
-<p>I am located in Plano, Texas and today the weather is 52&deg; and clear.</p>
+<p>I am located in Alvin, Texas and today the weather is 52&deg; and clear.</p>
 
 </body>
 </html>
