--- a/index.html
+++ b/index.html
@@ -1,54 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="CSD 340 Landing Page">
-    <meta name="author" content="Drew Crockett">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Drew Crockett CSD 340 Landing Page</title>
-
-    <link rel="stylesheet" href="site.css">
+  <meta charset="UTF-8">
+  <title>Crawford bioSite</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="container">
 
-        <h1>Drew Crockett CSD 340 Landing Page</h1>
-        <h2>CSD 340 Web Development with HTML and CSS</h2>
-        <hr>
+<header>
+  <h1>Crawford</h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="hobbies.html">Hobbies</a></li>
+    </ul>
+  </nav>
+</header>
 
-        <!-- Module Assignments -->
-        <h3>Module Assignments</h3>
-        <ul>
-            <!-- Module 1 -->
-            <li><a href="module-1/Crockett_Mod1_3.html">Module 1 - Assignment 1.3</a></li>
+<main>
+  <h2>Welcome</h2>
+  <p>This is Crawford, my 5 year old son. He is full of curiosity and energy, he loves exploring, learning new things, and having fun with his family.</p>
 
-            <!-- Module 2 -->
-            <li><a href="module-2/Crockett_Mod2_2.html">Module 2 - Assignment 2.2</a></li>
+  <figure>
+    <img src="images/pilot.jpg" alt="Crawford sitting on a fighter pilot seat">
+    <figcaption>Future Astronaunt.</figcaption>
+  </figure>
 
-            <!-- Module 3 -->
-            <li><a href="module-3/Crockett_Mod3_3.html">Module 3 - Assignment 3.3</a></li>
+  <a href="https://www.nasa.gov" target="_blank">Visit NASA</a>
+</main>
 
-            <!-- Module 4 -->
-            <li><a href="module-4/Crockett_Mod4_2.html">Module 4 - Assignment 4.2</a></li>
-        </ul>
+<footer>
+  <p>© 2026 Crawford bioSite</p>
+</footer>
 
-        <!-- Projects -->
-        <h3>Projects</h3>
-        <ul>
-            <li><a href="">bioSite Project Home Page</a></li>
-        </ul>
-
-        <!-- Important Links -->
-        <h4>Important Links</h4>
-        <ul>
-            <li><a href="https://validator.w3.org/" target="_blank">W3C HTML Validator</a></li>
-            <li><a href="http://jigsaw.w3.org/css-validator/" target="_blank">W3C CSS Validator</a></li>
-            <li><a href="https://www.w3schools.com/html/" target="_blank">HTML Tutorial</a></li>
-            <li><a href="https://bruinconnect.bellevue.edu/" target="_blank">BRUIN Connect</a></li>
-        </ul>
-
-    </div>
 </body>
 </html>
